syntax = "proto3";
package deaswang.nft.nmint;

import "gogoproto/gogo.proto";
import "nmint/params.proto";
import "nmint/minter.proto";
import "nmint/minterwl.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/deaswang/nft/x/nmint/types";

// GenesisState defines the nmint module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Minter minterList = 2 [(gogoproto.nullable) = false];
  repeated Minterwl minterwlList = 3 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
